# knowledge-graph-tutorial

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
docs/: hour00.md  hour01.md  hour02.md  hour03.md  hour04.md  hour05.md  hour06.md  hour07.md  hour08.md  hour09.md  hour10.md  hour11.md  hour12.md  hour13a.md  hour13b.md  hour13c.md  kyc_ubo_primer.html  reading_the_frontier.html
kg_tutorial/: __init__.py  agent.py  config.py  display.py  embed.py  eval.py  extract.py  graph.py  hyper.py  llm.py  relational_fm.py  retrieval.py  temporal.py  tools.py
kg_tutorial/data/: generate.py  load.py  schema.py
notebooks/: hour00_setup.ipynb  hour01_concepts.ipynb  hour02_vector_rag.ipynb  hour03_gen1_limits.ipynb  hour04_kg_foundations.ipynb  hour05_kg_construction.ipynb  hour06_kg_querying.ipynb  hour07_hybrid_retrieval.ipynb  hour08_agentic_reasoning.ipynb  hour09_context_graphs.ipynb  hour10_hypergraphs.ipynb  hour11_control_manager_agent.ipynb  hour12_production_eval.ipynb  hour13a_kg_foundation_models.ipynb  hour13b_temporal_kg.ipynb  hour13c_relational_fm.ipynb
notebooks/data/chroma_db/: chroma.sqlite3
notebooks/data/synthetic/: dataset.json
scripts/: _nb.py  build_hour00.py  build_hour01.py  build_hour02.py  build_hour03.py  build_hour04.py  build_hour05.py  build_hour06.py  build_hour07.py  build_hour08.py  build_hour09.py  build_hour10.py  build_hour11.py  build_hour12.py  build_hour13a.py  build_hour13b.py  build_hour13c.py
